# chronotes

./: .gitignore  2026.tex  README.md  pyproject.toml  week.ics
src/chronotes/: __init__.py
src/chronotes/cli/: main.py
src/chronotes/config/: schema.py
src/chronotes/domain/: __init__.py  models.py  planets.py  sunsigns.py
src/chronotes/providers/: astronomy_astral.py  contracts.py  geocode_base.py  geocode_nominatim.py  moon_phase_simple.py  moon_phase_stub.py
src/chronotes/render/: ics_render.py  latex_render.py
src/chronotes/render/templates/: doctemplate.tex.j2  pagetemplate.tex.j2
src/chronotes/services/: date_ranges.py  day_builder.py  location_resolution.py  moon_phase.py  planetary_hours.py  sun_sign.py
tests/: test_astral_markers_provider.py  test_astral_provider_sanity.py  test_build_range_service.py  test_cli_render_day_stdout.py  test_cli_render_year_location_resolution.py  test_date_ranges.py  test_ics_render.py  test_models_smoke.py  test_moon_phase_service.py  test_planetary_hours.py  test_planets.py  test_render_document_from_days.py  test_render_document_smoke.py  test_render_smoke.py  test_sunsign_service.py
