[project]
name = "chronotes"
version = "0.1.0"
description = "Astro day markers + LaTeX journal generator (planetary hours, sunrise/sunset, moon phase)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "astral>=3.2",
  "jinja2>=3.1",
  "typer>=0.12",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
geo = ["geopy>=2.4"]
sky = ["skyfield>=1.49"]

[project.scripts]
chronotes = "chronotes.cli.main:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "ruff>=0.14",
  "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:langsmith -p no:docker -p no:anyio"
